COLLADA Importer: Animated Seymour limbs rotate in wrong direction in 2.60a #29082

Closed
opened 2011-10-29 18:57:55 +02:00 by Darryl Gough · 6 comments

%%%The animated Seymour COLLADA file doesn't animate properly in 2.60a. It worked correctly in 2.59.

Steps to reproduce:

Expected Results:

  • The model will animate each limb and then the head
  • The arms should swing in front of the character
  • Legs bend backward
  • Head bends backward

Actual Results:

  • Each limb bends in the wrong direction

Frequency: constant

Occurs in previous version? No, worked correctly in 2.59.

I've tried on 2 computers. Both running Windows 7 64 bit. Both running Blender 2.60a 64 bit.
NVIDIA GeForce GTX 275%%%

%%%The animated Seymour COLLADA file doesn't animate properly in 2.60a. It worked correctly in 2.59. Steps to reproduce: - Install Blender 2.60a - Download animated Seymour models from http://collada.org/owl/browse.php?sess=0&parent=131&expand=1&order=name&curview=0 - Models: "Seymour_anim2.dae" and "Seymour_anim2_triangulate.dae" - Import COLLADA file into blender - Press Play Expected Results: - The model will animate each limb and then the head - The arms should swing in front of the character - Legs bend backward - Head bends backward Actual Results: - Each limb bends in the wrong direction Frequency: constant Occurs in previous version? No, worked correctly in 2.59. I've tried on 2 computers. Both running Windows 7 64 bit. Both running Blender 2.60a 64 bit. NVIDIA GeForce GTX 275%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%Attached screenshot%%%

%%%Attached screenshot%%%

%%%Collada bugs are not being handled well so far,

for this reason they are all being set as 'TODO' and linked from our wiki page.

http://wiki.blender.org/index.php/Dev:2.5/Source/Development/Todo/Import_Export#OpenCollada

This tracker item can still be updated with useful info and closed (removed from the page above) when fixed.%%%

%%%Collada bugs are not being handled well so far, for this reason they are all being set as \'TODO\' and linked from our wiki page. http://wiki.blender.org/index.php/Dev:2.5/Source/Development/Todo/Import_Export#OpenCollada This tracker item can still be updated with useful info and closed (removed from the page above) when fixed.%%%

%%%Bug fixed in svn revision 44221. Thanks for the report!%%%

%%%Bug fixed in svn revision 44221. Thanks for the report!%%%

%%%Mark this report as fixed.%%%

%%%Mark this report as fixed.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#29082
No description provided.