#collada animation import, bugfix #29082

Fix skeletal animation import for <rotation>, <scale> and <translate> transform types.

Tested for correctness visually using Seymouranim2.dae from http://collada.org/owl and animated creatures from DKGamesModels folder (from private section of the same site). The results match the results in FXComposer-2.5.

Since this is a fix towards correct reading of collada, it shouldn't break existing compatibility with Second Life.